tests/errors/foo.x

using io;

fn say_hello() -> void {
	println("hello");
}

export fn say_bye() -> void {
	println("bye");
}
